--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -6,8 +6,11 @@
 
 body {
     background-color: #d9dcd6;
+    margin-bottom: 30px;
+    
 }
 
+/* Page header*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -48,7 +51,10 @@ a {
 
 p {
     font-size: 16px;
+    position: relative;
 }
+
+/*page main image*/
 
 .hero {
     height: 800px;
@@ -68,14 +74,43 @@ p {
     float: right;
     margin-left: 25px;
 }
+/*Page main Section*/
 
 .content {
     width: 75%;
     display: inline-block;
-    margin-left: 20px;
+    margin-left: 20px; 
 }
 
-.benefits {
+.search-engine-optimization {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 270px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.online-reputation-management {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 270px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.social-media-marketing {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 270px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+/*Page Aside section*/
+#benefit {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -83,7 +118,7 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: #2589bd; 
 }
 
 .benefit-lead {
@@ -106,14 +141,51 @@ p {
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
+.search-engine-optimization h2 {
+    margin-bottom: 20px;
+    margin-right: 200px;
+    font-size: 36px;
 }
 
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
+.online-reputation-management h2 {
+    margin-bottom: 20px;
+    margin-right: 500px;
+    font-size: 36px;
+}
+
+.social-media-marketing h2 {
+    margin-bottom: 20px;
+    margin-right: 20px;
+    font-size: 36px;
+}
+
+.search-engine-optimization p {
+    Margin-right: 240px;
+    bottom: 10px;
+}
+
+.online-reputation-management p {
+    Margin-right: 240px;
+    bottom: 10px;
+}
+.social-media-marketing p {
+    Margin-right: 240px;
+    bottom: 10px;
+}
+
+.search-engine-optimization img {
+    max-height: 250px;
+    max-width: 250px;
+}
+
+.online-reputation-management img {
+    max-height: 250px;
+    max-width: 250px;
+}
+
+.social-media-marketing img {
+    max-height: 250px;
+    max-width: 250px;
 }
 
 .benefit-lead img {
@@ -133,61 +205,6 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
 .footer {
     padding: 30px;
     clear: both;
