--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -112,6 +112,7 @@ p {
 /*Page Aside section*/
 #benefit {
     margin-right: 20px;
+    margin-bottom: 20px;
     padding: 20px;
     clear: both;
     float: right;
