--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -6,8 +6,7 @@
 
 body {
     background-color: #d9dcd6;
-    margin-bottom: 30px;
-    
+    margin-bottom: 30px;   
 }
 
 /* Page header*/
@@ -43,19 +42,13 @@ body {
     display: inline-block;
     margin-left: 25px;
 }
-
+/* Web links*/
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
-p {
-    font-size: 16px;
-    position: relative;
-}
-
 /*page main image*/
-
 .hero {
     height: 800px;
     width: 100%;
@@ -74,14 +67,46 @@ p {
     float: right;
     margin-left: 25px;
 }
-/*Page main Section*/
 
-.content {
+/*Page main Section*/
+#content {
     width: 75%;
     display: inline-block;
     margin-left: 20px; 
 }
+/*Section headers*/
+.search-engine-optimization h2 {
+    margin-bottom: 20px;
+    margin-right: 200px;
+    font-size: 36px;
+}
 
+.online-reputation-management h2 {
+    margin-bottom: 20px;
+    margin-right: 500px;
+    font-size: 36px;
+}
+
+.social-media-marketing h2 {
+    margin-bottom: 20px;
+    margin-right: 20px;
+    font-size: 36px;
+}
+/*Section paragraph*/
+.search-engine-optimization p {
+    Margin-right: 240px;
+    bottom: 10px;
+}
+
+.online-reputation-management p {
+    Margin-right: 240px;
+    bottom: 10px;
+}
+.social-media-marketing p {
+    Margin-right: 240px;
+    bottom: 10px;
+}
+/* Section Article*/
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -109,8 +134,8 @@ p {
     color: #ffffff;
 }
 
-/*Page Aside section*/
-#benefit {
+/*Right Column*/
+aside {
     margin-right: 20px;
     margin-bottom: 20px;
     padding: 20px;
@@ -122,90 +147,68 @@ p {
     background-color: #2589bd; 
 }
 
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
+/* Right column header*/
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
-.search-engine-optimization h2 {
+/* right column paragraph*/
+aside > p{
+    margin-top:10px;
     margin-bottom: 20px;
-    margin-right: 200px;
-    font-size: 36px;
+    font-size: small;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    margin-right: 500px;
-    font-size: 36px;
+.benefit-lead {
+    margin: 0;
+    color: #ffffff;
 }
 
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    margin-right: 20px;
-    font-size: 36px;
+.benefit-brand {
+    margin-top: 0;
+    margin-bottom: 50px;
+    color: #ffffff;
 }
 
-.search-engine-optimization p {
-    Margin-right: 240px;
-    bottom: 10px;
+.benefit-cost {
+    margin-bottom: 0;
+    color: #ffffff;
 }
 
-.online-reputation-management p {
-    Margin-right: 240px;
-    bottom: 10px;
-}
-.social-media-marketing p {
-    Margin-right: 240px;
-    bottom: 10px;
-}
-
+/*Section Image*/
 .search-engine-optimization img {
     max-height: 250px;
     max-width: 250px;
 }
-
+/*Section Image*/
 .online-reputation-management img {
     max-height: 250px;
     max-width: 250px;
 }
-
+/*Section Image*/
 .social-media-marketing img {
     max-height: 250px;
     max-width: 250px;
 }
-
+/*Right column Image*/
 .benefit-lead img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/*Right column Image*/
 .benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/*Right column Image*/
 .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
+/*
 .footer {
     padding: 30px;
     clear: both;
@@ -216,3 +219,4 @@ p {
 .footer h2 {
     font-size: 20px;
 }
+*/
