--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -147,31 +147,42 @@ aside {
     background-color: #2589bd; 
 }
 
-/* Right column header*/
+/* Right column first header*/
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
 }
+/* Right column second header*/
+.benefit-brand {
+    margin-bottom: 10px;
+    text-align: center;
+}
+/* Right column first header*/
+.benefit-cost {
+    margin-bottom: 10px; 
+    text-align: center;
+}
 /* right column paragraph*/
 aside > p{
-    margin-top:10px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
+    text-align: center;
     font-size: small;
 }
-
+/*right column section*/
 .benefit-lead {
     margin: 0;
     color: #ffffff;
+    text-align: center;
 }
 
 .benefit-brand {
-    margin-top: 0;
+    margin-top: 20px;
     margin-bottom: 50px;
     color: #ffffff;
 }
 
 .benefit-cost {
-    margin-bottom: 0;
+    margin-bottom: 30px;
     color: #ffffff;
 }
 
@@ -215,7 +226,6 @@ aside > p{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-
 .footer h2 {
     font-size: 20px;
 }
