--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -45,7 +45,7 @@ p {
     padding-top: 20px;
 }
 /*page main image*/
-.hero {
+#hero {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
@@ -88,19 +88,19 @@ p {
     font-size: 36px;
 }
 /*Section paragraph*/
-.search-engine-optimization p {
+#search-engine-optimization p {
     Margin-right: 240px;
-    bottom: 10px;
+    padding-bottom: 20px;
 }
 /*Section paragraph*/
-.online-reputation-management p {
+#online-reputation-management p {
     Margin-right: 240px;
-    bottom: 10px;
+    padding-bottom: 20px;
 }
 /*Section paragraph*/
-.social-media-marketing p {
+#social-media-marketing p {
     Margin-right: 240px;
-    bottom: 10px;
+    padding-bottom: 20px;
 }
 /* Section Article*/
 #search-engine-optimization {
@@ -132,14 +132,14 @@ p {
 /*Right Column*/
 .benefit {
     margin-right: 20px;
-    margin-bottom: 20px;
     padding: 20px;
     clear: both;
     float: right;
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd; 
+    background-color: #2589bd;
+
 }
 /* Right column first header*/
 .benefit-lead h3 {
@@ -159,6 +159,7 @@ p {
 /* right column paragraph*/
 aside > p{
     margin-top:30px;
+    padding-bottom: 30px;
     text-align: center;
     font-size: small;
 }
