--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -8,7 +8,7 @@ body {
     background-color: #d9dcd6;
     margin-bottom: 30px;   
 }
-/* Page header*/
+/* Company Logo*/
 .header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -24,7 +24,7 @@ body {
 .header h1 .seo {
     color: #d9dcd6;
 }
-/* Page header*/
+/* Page navigation*/
 .header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -33,17 +33,13 @@ body {
     font-size: 20px;
 }
 
-/* Web links*/
+/* Navigation links*/
 a { 
     margin-right:15px;
     color: #ffffff;
     text-decoration: none;
 }
 
-/* Section paragrapg*/
-p {
-    padding-top: 20px;
-}
 /*page main image*/
 #hero {
     height: 800px;
@@ -64,71 +60,85 @@ p {
     margin-left: 25px;
 }
 /*Page main Section*/
-#content {
+.content {
     width: 75%;
     display: inline-block;
     margin-left: 20px; 
+    margin-right: 5px;
 }
+
+/* Section paragraph*/
+p {
+    padding-top: 0px;
+}
+
+/* Section Article*/
+.search-engine-optimization {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+/* Section Article*/
+.online-reputation-management {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+/* Section Article*/
+.social-media-marketing {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 310px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
 /*Section headers*/
 .search-engine-optimization h2 {
+    padding-right: 200px;
     margin-bottom: 20px;
-    margin-right: 200px;
     font-size: 36px;
 }
+
 /*Section headers*/
 .online-reputation-management h2 {
-    margin-bottom: 20px;
-    margin-right: 500px;
+    padding-right: 500px;
+    margin-bottom:20px;
     font-size: 36px;
 }
 /*Section headers*/
 .social-media-marketing h2 {
-    margin-bottom: 20px;
-    margin-right: 20px;
+    margin-bottom:20px;
     font-size: 36px;
 }
+
 /*Section paragraph*/
-#search-engine-optimization p {
+.search-engine-optimization p {
     Margin-right: 240px;
     padding-bottom: 20px;
 }
+
 /*Section paragraph*/
-#online-reputation-management p {
+.online-reputation-management p {
     Margin-right: 240px;
     padding-bottom: 20px;
 }
+
 /*Section paragraph*/
-#social-media-marketing p {
+.social-media-marketing p {
     Margin-right: 240px;
     padding-bottom: 20px;
 }
-/* Section Article*/
-#search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 270px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-/* Section Article*/
-#online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 270px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-/* Section Article*/
-#social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 270px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
+
 /*Right Column*/
 .benefit {
     margin-right: 20px;
@@ -141,21 +151,25 @@ p {
     background-color: #2589bd;
 
 }
+
 /* Right column first header*/
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
 }
+
 /* Right column second header*/
 .benefit-brand {
     margin-bottom: 10px;
     text-align: center;
 }
+
 /* Right column first header*/
 .benefit-cost {
     margin-bottom: 10px; 
     text-align: center;
 }
+
 /* right column paragraph*/
 aside > p{
     margin-top:30px;
@@ -163,6 +177,7 @@ aside > p{
     text-align: center;
     font-size: small;
 }
+
 /*right column section*/
 .benefit-lead {
     padding-top: 20px;
@@ -170,12 +185,14 @@ aside > p{
     color: #ffffff;
     text-align: center;
 }
+
 /*right column section*/
 .benefit-brand {
     margin-top: 30px;
     margin-bottom: 50px;
     color: #ffffff;
 }
+
 /*right column section*/
 .benefit-cost {
     padding-top: -30px;
@@ -183,46 +200,50 @@ aside > p{
     color: #ffffff;
 }
 /*Section Image*/
-#search-engine-optimization img {
+.search-engine-optimization img {
     max-height: 250px;
     max-width: 250px;
 }
+
 /*Section Image*/
-#online-reputation-management img {
+.online-reputation-management img {
     max-height: 250px;
     max-width: 250px;
 }
+
 /*Section Image*/
-#social-media-marketing img {
+.social-media-marketing img {
     max-height: 250px;
     max-width: 250px;
 }
+
 /*Right column Image*/
 .benefit-lead img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
+
 /*Right column Image*/
 .benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
+
 /*Right column Image*/
 .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
+
 /*
 .footer {
+    font-size: 20px;
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-}
-.footer h2 {
-    font-size: 20px;
 }
 */
